2006-04-28  Alex Roitman  <shura@gramps-project.org>
	* src/ScratchPad.py (ScratchPadWindow.__init__): Allow only one
	instance; translate label; remove unneeded event handlers.
	* src/ViewManager.py (ViewManager.scratchpad): Catch exception.

2006-04-27  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.build_plugin_menu): Use unique
	command-line name for action menu.
	* src/plugins/GraphViz.py: Fix report.
	* src/PluginUtils/_PluginMgr.py (_register_standalone): Remove
	unneeded import.
	* src/PluginUtils/_Plugins.py (build_tools_menu, build_report_menu,
	build_plugin_menu, by_menu_name): Remove functions already
	re-implemented in ViewManager.
	* src/plugins/EventCmp.py: Correct button label.
	* src/plugins/StatisticsChart.py: Fix report.

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: fix custom event storing
	* src/GrampsDb/_GrampsBSDDB.py: fix custom event storing
	* src/Editors/_EditEventRef.py: fix custom event storing
	* src/Editors/_EditEvent.py: fix custom event storing
	* src/GrampsWidgets.py: fix custom data types
	* src/AutoComp.py: fix custom data types
	
2006-04-27  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenSpreadSheet.py: fix manifest so files open in calc

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditReference.py: fix warn_box call
	* src/DisplayTabs.py: handle canceled edit box for media
	* src/AddMedia.py: ManagedWindow support
	* src/SelectPerson.py: ManagedWindow support

2006-04-27  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (reports_clicked, tools_clicked): handle
	exception.
	* src/PluginUtils/_Plugins.py (PluginDialog.on_apply_clicked):
	Correctly call gui_tool, fix wm.	

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPerson.py (EditPerson._create_tabbed_pages): 
	initialize load_image callback
	* src/DisplayTabs.py (GalleryTab): call callback if defined when